--- a/components/Pricing/Pricing.module.css
+++ b/components/Pricing/Pricing.module.css
@@ -1,24 +1,30 @@
+.wrapper {
+  padding-top: calc(var(--mantine-spacing-xl) * 2);
+  padding-bottom: calc(var(--mantine-spacing-xl) * 2);
+  background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
+}
+
 .title {
-    font-size: 34px;
-    font-weight: 900;
-  
-    @media (max-width: $mantine-breakpoint-sm) {
-      font-size: 24px;
-    }
+  font-size: 34px;
+  font-weight: 900;
+
+  @media (max-width: $mantine-breakpoint-sm) {
+    font-size: 24px;
   }
-  
-  .description {
-    max-width: 600px;
-    margin: auto;
-  
-    &::after {
-      content: '';
-      display: block;
-      background-color: var(--mantine-color-blue-filled);
-      width: 45px;
-      height: 2px;
-      margin-top: var(--mantine-spacing-sm);
-      margin-left: auto;
-      margin-right: auto;
-    }
+}
+
+.description {
+  max-width: 600px;
+  margin: auto;
+
+  &::after {
+    content: '';
+    display: block;
+    background-color: var(--mantine-color-blue-filled);
+    width: 45px;
+    height: 2px;
+    margin-top: var(--mantine-spacing-sm);
+    margin-left: auto;
+    margin-right: auto;
   }
+}
