--- a/components/Contact/Contact.module.css
+++ b/components/Contact/Contact.module.css
@@ -1,64 +1,44 @@
 .wrapper {
-    min-height: 400px;
-    background-image: linear-gradient(
-      -60deg,
-      var(--mantine-color-blue-4) 0%,
-      var(--mantine-color-blue-7) 100%
-    );
-    border-radius: var(--mantine-radius-md);
-    padding: calc(var(--mantine-spacing-xl) * 2.5);
+    padding: calc(var(--mantine-spacing-xl) * 2);
+    background-color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-8));
   
     @media (max-width: $mantine-breakpoint-sm) {
-      padding: calc(var(--mantine-spacing-xl) * 1.5);
+      padding: var(--mantine-spacing-xl);
     }
   }
   
   .title {
-    font-family:
-      Greycliff CF,
-      var(--mantine-font-family);
-    color: var(--mantine-color-white);
-    line-height: 1;
+    font-family: Greycliff CF, var(--mantine-font-family);
+    font-size: rem(36px);
+    font-weight: 900;
+    line-height: 1.1;
+    margin-bottom: var(--mantine-spacing-md);
+    color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
   }
   
   .description {
-    color: var(--mantine-color-blue-0);
-    max-width: 300px;
-  
-    @media (max-width: $mantine-breakpoint-sm) {
-      max-width: 100%;
-    }
+    max-width: rem(300px);
+    margin-bottom: var(--mantine-spacing-xl);
   }
   
   .form {
-    background-color: var(--mantine-color-white);
+    background-color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-7));
     padding: var(--mantine-spacing-xl);
     border-radius: var(--mantine-radius-md);
-    box-shadow: var(--mantine-shadow-lg);
+    border: rem(1px) solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
   }
   
   .social {
-    color: var(--mantine-color-white);
-  
-    @mixin hover {
-      color: var(--mantine-color-blue-1);
-    }
+    display: flex;
+    margin-top: var(--mantine-spacing-xl);
   }
   
-  .input {
-    background-color: var(--mantine-color-white);
-    border-color: var(--mantine-color-gray-4);
-    color: var(--mantine-color-black);
-  
-    &::placeholder {
-      color: var(--mantine-color-gray-5);
-    }
+  .icon {
+    color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-2));
   }
   
-  .inputLabel {
-    color: var(--mantine-color-black);
-  }
-  
-  .control {
-    background-color: var(--mantine-color-blue-6);
+  .socialLink {
+    color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
+    font-size: var(--mantine-font-size-sm);
+    font-weight: 500;
   }
