--- a/components/FAQ/FAQ.module.css
+++ b/components/FAQ/FAQ.module.css
@@ -1,18 +1,52 @@
 .wrapper {
-  padding-top: calc(var(--mantine-spacing-xl) * 2);
-  padding-bottom: calc(var(--mantine-spacing-xl) * 2);
+  padding-top: var(--mantine-spacing-xl);
+  padding-bottom: var(--mantine-spacing-xl);
 }
 
 .title {
-  margin-bottom: var(--mantine-spacing-md);
-  padding-left: var(--mantine-spacing-md);
+  font-size: rem(36px);
+  font-weight: 800;
+  line-height: 1.1;
+  margin-bottom: rem(12);
   color: light-dark(var(--mantine-color-black), var(--mantine-color-white));
-  font-family:
-    Greycliff CF,
-    var(--mantine-font-family);
+
+  @media (max-width: $mantine-breakpoint-sm) {
+    font-size: rem(28px);
+  }
 }
 
 .item {
-  font-size: var(--mantine-font-size-sm);
-  color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-1));
+  background-color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-7));
+  border: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
+  padding: var(--mantine-spacing-xl);
+  border-radius: var(--mantine-radius-md);
+  transition: transform 200ms ease;
+
+  @mixin hover {
+    transform: translateY(-4px);
+  }
+}
+
+.accordion {
+  margin-top: rem(40);
+}
+
+.accordion :global(.mantine-Accordion-item) {
+  border: 1px solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
+  background-color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-7));
+  margin-bottom: rem(8);
+}
+
+.accordion :global(.mantine-Accordion-control) {
+  padding: rem(16);
+}
+
+.accordion :global(.mantine-Accordion-control:hover) {
+  background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
+}
+
+.accordion :global(.mantine-Accordion-panel) {
+  padding: rem(16);
+  padding-top: 0;
+  color: var(--mantine-color-dimmed);
 }
